Deleted .html in url

--- a/contacts.html
+++ b/contacts.html
@@ -35,8 +35,8 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="index.html" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="index.html" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="/" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
                         <div class="menu__icon">
@@ -44,9 +44,9 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="projects.html" class="__hover"> Projects </a> </li>
-                                <li> <a href="about_us.html" class="__hover"> About us </a> </li>
-                                <li> <a href="contacts.html" class="projects-link __hover"> Contacts </a> </li>
+                                <li> <a href="projects" class="__hover"> Projects </a> </li>
+                                <li> <a href="about_us" class="__hover"> About us </a> </li>
+                                <li> <a href="contacts" class="projects-link __hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li> 
                                     <div class="menu__icons">
