--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a data-goto=".page__projects" href="projects.html" class="menu__link __hover"> Projects </a> </li>
-                                <li> <a data-goto=".page__about-us" href="about_us.html" class="menu__link __hover"> About us </a> </li>
-                                <li> <a data-goto=".page__contacts" href="contacts.html" class="menu__link __hover"> Contacts </a> </li>
+                                <li> <a data-goto=".page__projects" href="projects" class="menu__link __hover"> Projects </a> </li>
+                                <li> <a data-goto=".page__about-us" href="about_us" class="menu__link __hover"> About us </a> </li>
+                                <li> <a data-goto=".page__contacts" href="contacts" class="menu__link __hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li>    
                                     <div class="menu__icons">
@@ -105,67 +105,67 @@
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
                                 <div class="project__img">
-                                    <a href="projects/nszu.html"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/nszu.html"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/nszu"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/nszu"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/nszu.html" class="project__text"> National Health Service of Ukraine, Kyiv </a>
+                                    <a href="projects/nszu" class="project__text"> National Health Service of Ukraine, Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__leleka project__content">
                                 <div class="project__img">
-                                    <a href="projects/leleka.html"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/leleka.html"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/leleka"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/leleka"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/leleka.html" class="project__text"> Maternity home "Leleka", Kyiv </a>
+                                    <a href="projects/leleka" class="project__text"> Maternity home "Leleka", Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
                                 <div class="project__img">
-                                    <a href="projects/aquapark.html"><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/aquapark.html"><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/aquapark"><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/aquapark"><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/aquapark.html" class="project__text"> Aquapark "Karpatia", Mukachevo </a>
+                                    <a href="projects/aquapark" class="project__text"> Aquapark "Karpatia", Mukachevo </a>
                                 </div>
                             </div>
                             <div class="project__brovary project__content">
                                 <div class="project__img">
-                                    <a href="projects/school-brovary.html"><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/school-brovary.html"><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/school-brovary"><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/school-brovary"><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/school-brovary.html" class="project__text"> Primary school, Brovary </a>
+                                    <a href="projects/school-brovary" class="project__text"> Primary school, Brovary </a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
                                 <div class="project__img">
-                                    <a href="projects/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/nova-kakhovka.html" class="project__text"> Center of Government Services, Nova-Kakhovka </a>
+                                    <a href="projects/nova-kakhovka" class="project__text"> Center of Government Services, Nova-Kakhovka </a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
                                 <div class="project__img">
-                                    <a href="projects/kindergarten-zirochka.html"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/kindergarten-zirochka.html"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/kindergarten-zirochka"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/kindergarten-zirochka"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
                                 </div>    
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/kindergarten-zirochka.html" class="project__text"> Kindergarten "Zyrochka", Brovary </a>
+                                    <a href="projects/kindergarten-zirochka" class="project__text"> Kindergarten "Zyrochka", Brovary </a>
                                 </div>
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="projects.html" class="more-btn-text">See More Projects</a>
+                            <a href="projects" class="more-btn-text">See More Projects</a>
                         </div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="about_us.html" class="more-btn-text">About us</a>                            
+                            <a href="about_us" class="more-btn-text">About us</a>                            
                         </div>                       
                     </div>
                 </div>
