--- a/projects/warning.html
+++ b/projects/warning.html
@@ -33,8 +33,8 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="../index.html" class="header_logo-pic"><img src="../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="../index.html" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="../" class="header_logo-pic"><img src="../assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="../" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
                         <div class="menu__icon">
@@ -42,9 +42,9 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../projects.html" class="__hover"> Projects </a> </li>
-                                <li> <a href="../about_us.html" class="__hover"> About us </a> </li>
-                                <li> <a href="../contacts.html" class="__hover"> Contacts </a> </li>
+                                <li> <a href="../projects" class="__hover"> Projects </a> </li>
+                                <li> <a href="../about_us" class="__hover"> About us </a> </li>
+                                <li> <a href="../contacts" class="__hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li> 
                                     <div class="menu__icons">
@@ -83,7 +83,7 @@
                         <h3> This page is under construction </h3>
                         <p> Our exciting new website will launch soon </p>
                         <p> Come back and check it out </p>
-                        <a href="../projects.html" class="prev-btn"> Previous page </a>
+                        <a href="../projects" class="prev-btn"> Previous page </a>
                     </div>
                 </div>                      
             </div>
