Rename projects folder

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a data-goto=".page__content" href="#" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a data-goto=".page__content" href="#" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a data-goto=".page__content" href="/" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a data-goto=".page__content" href="/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
                         <div class="menu__icon">
@@ -105,62 +105,62 @@
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
                                 <div class="project__img">
-                                    <a href="projects/nszu"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/nszu"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
+                                    <a href="project/nszu"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
+                                    <a href="project/nszu"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/nszu" class="project__text"> National Health Service of Ukraine, Kyiv </a>
+                                    <a href="project/nszu" class="project__text"> National Health Service of Ukraine, Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__leleka project__content">
                                 <div class="project__img">
-                                    <a href="projects/leleka"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/leleka"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
+                                    <a href="project/leleka"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
+                                    <a href="project/leleka"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/leleka" class="project__text"> Maternity home "Leleka", Kyiv </a>
+                                    <a href="project/leleka" class="project__text"> Maternity home "Leleka", Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
                                 <div class="project__img">
-                                    <a href="projects/aquapark"><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/aquapark"><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
+                                    <a href="project/aquapark"><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
+                                    <a href="project/aquapark"><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/aquapark" class="project__text"> Aquapark "Karpatia", Mukachevo </a>
+                                    <a href="project/aquapark" class="project__text"> Aquapark "Karpatia", Mukachevo </a>
                                 </div>
                             </div>
                             <div class="project__brovary project__content">
                                 <div class="project__img">
-                                    <a href="projects/school-brovary"><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/school-brovary"><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
+                                    <a href="project/school-brovary"><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
+                                    <a href="project/school-brovary"><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/school-brovary" class="project__text"> Primary school, Brovary </a>
+                                    <a href="project/school-brovary" class="project__text"> Primary school, Brovary </a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
                                 <div class="project__img">
-                                    <a href="projects/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
+                                    <a href="project/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
+                                    <a href="project/nova-kakhovka"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/nova-kakhovka" class="project__text"> Center of Government Services, Nova-Kakhovka </a>
+                                    <a href="project/nova-kakhovka" class="project__text"> Center of Government Services, Nova-Kakhovka </a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
                                 <div class="project__img">
-                                    <a href="projects/kindergarten-zirochka"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
-                                    <a href="projects/kindergarten-zirochka"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
+                                    <a href="project/kindergarten-zirochka"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
+                                    <a href="project/kindergarten-zirochka"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
                                 </div>    
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/kindergarten-zirochka" class="project__text"> Kindergarten "Zyrochka", Brovary </a>
+                                    <a href="project/kindergarten-zirochka" class="project__text"> Kindergarten "Zyrochka", Brovary </a>
                                 </div>
                             </div>
                         </div>
