Rename projects.html to all-projects.html and changed _ to - in about-us page

--- a/about-us.html
+++ b/about-us.html
@@ -45,8 +45,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="projects" class="__hover"> Projects </a> </li>
-                                <li> <a href="about_us" class="projects-link __hover"> About us </a> </li>
+                                <li> <a href="all-projects" class="__hover"> Projects </a> </li>
+                                <li> <a href="about-us" class="projects-link __hover"> About us </a> </li>
                                 <li> <a href="contacts" class="__hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li> 
