--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a data-goto=".page__projects" href="projects" class="menu__link __hover"> Projects </a> </li>
-                                <li> <a data-goto=".page__about-us" href="about_us" class="menu__link __hover"> About us </a> </li>
+                                <li> <a data-goto=".page__projects" href="all-projects" class="menu__link __hover"> Projects </a> </li>
+                                <li> <a data-goto=".page__about-us" href="about-us" class="menu__link __hover"> About us </a> </li>
                                 <li> <a data-goto=".page__contacts" href="contacts" class="menu__link __hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li>    
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="projects" class="more-btn-text">See More Projects</a>
+                            <a href="all-projects" class="more-btn-text">See More Projects</a>
                         </div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="about_us" class="more-btn-text">About us</a>                            
+                            <a href="about-us" class="more-btn-text">About us</a>                            
                         </div>                       
                     </div>
                 </div>
