--- a/project/warning.html
+++ b/project/warning.html
@@ -42,8 +42,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../projects" class="__hover"> Projects </a> </li>
-                                <li> <a href="../about_us" class="__hover"> About us </a> </li>
+                                <li> <a href="../all-projects" class="__hover"> Projects </a> </li>
+                                <li> <a href="../about-us" class="__hover"> About us </a> </li>
                                 <li> <a href="../contacts" class="__hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li> 
@@ -83,7 +83,7 @@
                         <h3> This page is under construction </h3>
                         <p> Our exciting new website will launch soon </p>
                         <p> Come back and check it out </p>
-                        <a href="../projects" class="prev-btn"> Previous page </a>
+                        <a href="../all-projects" class="prev-btn"> Previous page </a>
                     </div>
                 </div>                      
             </div>
