--- a/all-projects.html
+++ b/all-projects.html
@@ -45,8 +45,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="projects" class="projects-link __hover"> Projects </a> </li>
-                                <li> <a href="about_us" class="__hover"> About us </a> </li>
+                                <li> <a href="all-projects" class="projects-link __hover"> Projects </a> </li>
+                                <li> <a href="about-us" class="__hover"> About us </a> </li>
                                 <li> <a href="contacts" class="__hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li> 
