--- a/contacts.html
+++ b/contacts.html
@@ -44,8 +44,8 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="projects" class="__hover"> Projects </a> </li>
-                                <li> <a href="about_us" class="__hover"> About us </a> </li>
+                                <li> <a href="all-projects" class="__hover"> Projects </a> </li>
+                                <li> <a href="about-us" class="__hover"> About us </a> </li>
                                 <li> <a href="contacts" class="projects-link __hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
                                 <li> 
