Renew php mailer

--- a/index.html
+++ b/index.html
@@ -273,23 +273,23 @@
                                     <form action="#" id="contacts__form" class="contacts__form">
                                         <p class="contacts__cotact-us-title"> Contact us </p>
                                         <div class="contacts__input-block">
-                                            <label for="inp-name" class="input-label"> Name* </label>
-                                            <input id="inp-name" type="text" name="name" placeholder="Provide your name" class="input-field _req _name">
+                                            <label for="inpName" class="input-label"> Name* </label>
+                                            <input id="inpName" type="text" name="name" placeholder="Provide your name" class="input-field _req _name">
                                             <div class="input-error name-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-phone" class="input-label"> Phone Number* </label>
-                                            <input id="inp-phone" type="text" name="phone" placeholder="Provide your phone number" class="input-field _req _phone"> 
+                                            <label for="inpPhone" class="input-label"> Phone Number* </label>
+                                            <input id="inpPhone" type="text" name="phone" placeholder="Provide your phone number" class="input-field _req _phone"> 
                                             <div class="input-error phone-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-email" class="input-label"> E-mail Address* </label>
-                                            <input id="inp-email" type="text" name="email" placeholder="Provide your e-mail" class="input-field _req _email">
+                                            <label for="inpEmail" class="input-label"> E-mail Address* </label>
+                                            <input id="inpEmail" type="text" name="email" placeholder="Provide your e-mail" class="input-field _req _email">
                                             <div class="input-error email-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
-                                            <label for="inp-message" class="input-label"> Message* </label>
-                                            <textarea id="inp-message" name="message" placeholder="Provide your message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
+                                            <label for="inpMessage" class="input-label"> Message* </label>
+                                            <textarea id="inpMessage" name="message" placeholder="Provide your message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
                                             <div class="input-error message-error"></div>                    
                                         </div> 
                                         <p class="error-hiden">Please, complete all fields</p>
