Worked, but I don't like it

--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@
                             <div class="contacts__place-a-meeting">
                                 <div class="contacts__place-a-meeting-container">                    
                                     <form action="#" id="contacts__form" class="contacts__form">
+
+                                        <!-- Hidden Required Fields -->
+                                        <input type="hidden" name="project_name" value="APG Kyrii">
+                                        <input type="hidden" name="admin_email" value="	kozaktanya077@gmail.com">
+                                        <input type="hidden" name="form_subject" value="Form">
+                                        <!-- END Hidden Required Fields -->
+
                                         <p class="contacts__cotact-us-title"> Contact us </p>
                                         <div class="contacts__input-block">
                                             <label for="inpName" class="input-label"> Name* </label>
@@ -324,6 +331,8 @@
     </footer>
     <script src="assets/js/preloader.js"></script>
     <script src="assets/js/contact-us_form.js" ></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="main.js"></script>
     <script src="assets/js/burger.js" ></script>
     <script src="assets/js/page-scrolling.js" ></script>
     <script src="assets/js/phone-mask.js" ></script>
