Fixed form messages and add fade out effect to it

--- a/contacts.html
+++ b/contacts.html
@@ -77,9 +77,12 @@
                     </div> 
                 </div>
             </div>
+            <div class="form-response">
+                <div class="response"></div>
+            </div>
         </header>
         <section class="page__content">
-            <div class="page__container">
+            <div class="page__container">                
                 <div class="page__contacts scroll-section" id="page__contacts">
                     <div class="section-wrapper contacts">
                         <div class="contacts__container">
