--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                     </div>
                 </div>
             </div>
+            <div class="form-response">
+                <div class="response"></div>
+            </div>
         </header>
         <section class="page__content" id="page__content">
             <div class="page__container">
